--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,21 @@
 asgiref==3.8.1
+certifi==2024.7.4
+charset-normalizer==3.3.2
 crispy-bootstrap4==2024.1
+dj-database-url==2.2.0
 Django==4.2.13
 django-crispy-forms==2.2
 django-debug-toolbar==4.4.2
+gunicorn==22.0.0
+idna==3.7
+mailtrap==2.0.1
+packaging==24.1
 pillow==10.4.0
+psycopg2==2.9.9
+python-decouple==3.8
+requests==2.32.3
 sqlparse==0.5.0
 typing_extensions==4.12.2
 tzdata==2024.1
+urllib3==2.2.2
+whitenoise==6.7.0
