--- a/requirements.txt
+++ b/requirements.txt
@@ -6,15 +6,24 @@ dj-database-url==2.2.0
 Django==4.2.13
 django-crispy-forms==2.2
 django-debug-toolbar==4.4.2
+django-sendgrid-v5==1.2.3
 gunicorn==22.0.0
 idna==3.7
 mailtrap==2.0.1
+numpy==2.0.1
 packaging==24.1
+pandas==2.2.2
 pillow==10.4.0
 psycopg2==2.9.9
+python-dateutil==2.9.0.post0
 python-decouple==3.8
+python-http-client==3.3.7
+pytz==2024.1
 requests==2.32.3
+sendgrid==6.11.0
+six==1.16.0
 sqlparse==0.5.0
+starkbank-ecdsa==2.2.0
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
