--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 asgiref==3.8.1
+Brotli==1.1.0
 certifi==2024.7.4
+cffi==1.17.0
 charset-normalizer==3.3.2
 crispy-bootstrap4==2024.1
+cssselect2==0.7.0
 dj-database-url==2.2.0
 Django==4.2.13
 django-crispy-forms==2.2
 django-debug-toolbar==4.4.2
 django-sendgrid-v5==1.2.3
+fonttools==4.53.1
 gunicorn==22.0.0
+html5lib==1.1
 idna==3.7
 mailtrap==2.0.1
 numpy==2.0.1
@@ -15,6 +20,9 @@ packaging==24.1
 pandas==2.2.2
 pillow==10.4.0
 psycopg2==2.9.9
+pycparser==2.22
+pydyf==0.11.0
+pyphen==0.16.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 python-http-client==3.3.7
@@ -24,7 +32,11 @@ sendgrid==6.11.0
 six==1.16.0
 sqlparse==0.5.0
 starkbank-ecdsa==2.2.0
+tinycss2==1.3.0
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
+weasyprint==56.1
+webencodings==0.5.1
 whitenoise==6.7.0
+zopfli==0.2.3
