--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.8.1
+boto3==1.35.1
+botocore==1.35.1
 Brotli==1.1.0
 certifi==2024.7.4
 cffi==1.17.0
@@ -11,12 +13,15 @@ django-crispy-forms==2.2
 django-debug-toolbar==4.4.2
 django-sendgrid-v5==1.2.3
 django-storages==1.14.4
+et_xmlfile==2.0.0
 fonttools==4.53.1
 gunicorn==22.0.0
 html5lib==1.1
 idna==3.7
+jmespath==1.0.1
 mailtrap==2.0.1
 numpy==2.0.1
+openpyxl==3.1.5
 packaging==24.1
 pandas==2.2.2
 pillow==10.4.0
@@ -29,6 +34,7 @@ python-decouple==3.8
 python-http-client==3.3.7
 pytz==2024.1
 requests==2.32.3
+s3transfer==0.10.2
 sendgrid==6.11.0
 six==1.16.0
 sqlparse==0.5.0
@@ -36,7 +42,7 @@ starkbank-ecdsa==2.2.0
 tinycss2==1.3.0
 typing_extensions==4.12.2
 tzdata==2024.1
-urllib3==2.2.2
+urllib3==1.26.19
 weasyprint==56.1
 webencodings==0.5.1
 whitenoise==6.7.0
