--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,49 @@
-annotated-types==0.7.0
-anyio==4.9.0
-black==25.1.0
-certifi==2025.4.26
-click==8.1.8
-colorama==0.4.6
-dnspython==2.7.0
-email_validator==2.2.0
-fastapi==0.115.12
-fastapi-cli==0.0.7
-h11==0.16.0
-httpcore==1.0.9
-httptools==0.6.4
-httpx==0.28.1
-idna==3.10
-Jinja2==3.1.6
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-mdurl==0.1.2
-mypy_extensions==1.1.0
-packaging==25.0
-pathspec==0.12.1
-platformdirs==4.3.8
-pydantic==2.11.5
-pydantic_core==2.33.2
-Pygments==2.19.1
-python-dotenv==1.1.0
-python-multipart==0.0.20
-PyYAML==6.0.2
-rich==14.0.0
-rich-toolkit==0.14.6
-shellingham==1.5.4
-sniffio==1.3.1
-starlette==0.46.2
-typer==0.15.4
-typing-inspection==0.4.1
-typing_extensions==4.13.2
-uvicorn==0.34.2
-watchfiles==1.0.5
-websockets==15.0.1
+asgiref==3.8.1
+boto3==1.35.1
+botocore==1.35.1
+Brotli==1.1.0
+certifi==2024.7.4
+cffi==1.17.0
+charset-normalizer==3.3.2
+crispy-bootstrap4==2024.1
+cssselect2==0.7.0
+dj-database-url==2.2.0
+Django==4.2.13
+django-crispy-forms==2.2
+django-debug-toolbar==4.4.2
+django-sendgrid-v5==1.2.3
+django-storages==1.14.4
+et_xmlfile==2.0.0
+fonttools==4.53.1
+gunicorn==22.0.0
+html5lib==1.1
+idna==3.7
+jmespath==1.0.1
+mailtrap==2.0.1
+numpy==2.0.1
+openpyxl==3.1.5
+packaging==24.1
+pandas==2.2.2
+pillow==10.4.0
+psycopg2==2.9.9
+pycparser==2.22
+pydyf==0.11.0
+pyphen==0.16.0
+python-dateutil==2.9.0.post0
+python-decouple==3.8
+python-http-client==3.3.7
+pytz==2024.1
+requests==2.32.3
+s3transfer==0.10.2
+sendgrid==6.11.0
+six==1.16.0
+sqlparse==0.5.0
+starkbank-ecdsa==2.2.0
+tinycss2==1.3.0
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==1.26.19
+weasyprint==56.1
+webencodings==0.5.1
+whitenoise==6.7.0
+zopfli==0.2.3
